[gd_scene load_steps=7 format=2]

[ext_resource path="res://Graphics/Fonts/LatoItalic8.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menu/Options.gd" type="Script" id=2]
[ext_resource path="res://Menu/BrightenFocus.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.380392, 0.658824, 0.807843, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.152941, 0.0980392, 0.184314, 1 )

[sub_resource type="Theme" id=3]
HSlider/icons/grabber = null
HSlider/icons/grabber_disabled = null
HSlider/icons/grabber_highlight = null
HSlider/icons/tick = null
HSlider/styles/grabber_area = SubResource( 1 )
HSlider/styles/slider = SubResource( 2 )

[node name="Options" type="Control"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.505882, 0.27451, 0.27451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SfxLabel" type="Label" parent="VBoxContainer"]
margin_right = 768.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "SFX Volume"

[node name="SfxSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 768.0
margin_bottom = 93.0
focus_neighbour_bottom = NodePath("../MusicSlider")
focus_next = NodePath("../MusicSlider")
theme = SubResource( 3 )
step = 5.0
rounded = true

[node name="ColorRect" parent="VBoxContainer/SfxSlider" instance=ExtResource( 3 )]
margin_top = -10.0
margin_bottom = 10.0

[node name="MusicLabel" type="Label" parent="VBoxContainer"]
margin_top = 97.0
margin_right = 768.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 1 )
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 768.0
margin_bottom = 190.0
focus_neighbour_top = NodePath("../SfxSlider")
focus_neighbour_bottom = NodePath("../FullscreenCheckBox")
focus_next = NodePath("../FullscreenCheckBox")
focus_previous = NodePath("../SfxSlider")
theme = SubResource( 3 )
step = 5.0
rounded = true

[node name="ColorRect" parent="VBoxContainer/MusicSlider" instance=ExtResource( 3 )]
margin_top = -10.0
margin_bottom = 10.0

[node name="FullscreenCheckBox" type="CheckBox" parent="VBoxContainer"]
margin_top = 194.0
margin_right = 768.0
margin_bottom = 261.0
focus_neighbour_top = NodePath("../MusicSlider")
focus_neighbour_bottom = NodePath("../../AcceptClose/Accept")
focus_next = NodePath("../../AcceptClose/Accept")
focus_previous = NodePath("../MusicSlider")
custom_fonts/font = ExtResource( 1 )
text = "Fullscreen"
expand_icon = true

[node name="ColorRect" parent="VBoxContainer/FullscreenCheckBox" instance=ExtResource( 3 )]

[node name="AcceptClose" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept" type="Button" parent="AcceptClose"]
anchor_right = 0.5
margin_left = 10.0
margin_right = -5.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../../VBoxContainer/FullscreenCheckBox")
focus_neighbour_right = NodePath("../Close")
focus_next = NodePath("../Close")
focus_previous = NodePath("../../VBoxContainer/FullscreenCheckBox")
custom_fonts/font = ExtResource( 1 )
text = "Accept"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" parent="AcceptClose/Accept" instance=ExtResource( 3 )]
show_behind_parent = false

[node name="Close" type="Button" parent="AcceptClose"]
anchor_left = 0.5
anchor_right = 1.0
margin_left = 5.0
margin_right = -10.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../Accept")
focus_previous = NodePath("../Accept")
custom_fonts/font = ExtResource( 1 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" parent="AcceptClose/Close" instance=ExtResource( 3 )]
show_behind_parent = false
